@@ -1,5 +1,6 @@
 package net.regions_unexplored.world.features.treedecorators;
 
+import com.mojang.serialization.Codec;
 import com.mojang.serialization.MapCodec;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
@@ -9,24 +10,39 @@ import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.levelgen.feature.treedecorators.TreeDecorator;
 import net.minecraft.world.level.levelgen.feature.treedecorators.TreeDecoratorType;
-import net.regions_unexplored.block.RuBlocks;
-import net.regions_unexplored.data.tags.RuTags;
+import net.regions_unexplored.registry.RUBlocks;
+import net.regions_unexplored.registry.tag.RUBlockTags;
 
 import java.util.Random;
 
 public class WillowTrunkDecorator extends TreeDecorator {
-	public static final WillowTrunkDecorator INSTANCE = new WillowTrunkDecorator();
-	public static final MapCodec<WillowTrunkDecorator> CODEC = MapCodec.unit(WillowTrunkDecorator::new);
-	public static TreeDecoratorType<?> WILLOW_TRUNK_DECORATOR = new TreeDecoratorType<>(CODEC);
+	public static final MapCodec<WillowTrunkDecorator> CODEC = Codec.floatRange(0f, 1f).fieldOf("chance").xmap(WillowTrunkDecorator::new, WillowTrunkDecorator::chance);
+	public static TreeDecoratorType<WillowTrunkDecorator> TYPE = new TreeDecoratorType<>(CODEC);
+
+	private final float chance;
+
+	public WillowTrunkDecorator(float chance) {
+		this.chance = chance;
+	}
+
+	public static WillowTrunkDecorator of(float chance) {
+		return new WillowTrunkDecorator(chance);
+	}
+
+	public float chance() {
+		return this.chance;
+	}
 
 	@Override
 	protected TreeDecoratorType<?> type() {
-		return WILLOW_TRUNK_DECORATOR;
+		return TYPE;
 	}
 
 	@Override
 	public void place(Context context) {
-		BlockPos newpos = context.logs().get(0);
+		if (context.random().nextFloat() > this.chance) return;
+
+		BlockPos newpos = context.logs().getFirst();
 		if(context.level().isStateAtPosition(newpos, WillowTrunkDecorator::isGrass)){
 			newpos=newpos.above();
 		}
@@ -64,26 +80,26 @@ public class WillowTrunkDecorator extends TreeDecorator {
 		LevelSimulatedReader level = context.level();
 		
 		if(level.isStateAtPosition(pos, WillowTrunkDecorator::isForestGrass)){
-			context.setBlock(pos, RuBlocks.PEAT_DIRT.get().defaultBlockState());
+			context.setBlock(pos, RUBlocks.PEAT_DIRT.get().defaultBlockState());
 		}
 		else if(level.isStateAtPosition(pos, WillowTrunkDecorator::isPlainsGrass)){
-			context.setBlock(pos, RuBlocks.SILT_DIRT.get().defaultBlockState());
+			context.setBlock(pos, RUBlocks.SILT_DIRT.get().defaultBlockState());
 		}
 		else if(level.isStateAtPosition(pos, WillowTrunkDecorator::isGrass)){
 			context.setBlock(pos, Blocks.DIRT.defaultBlockState());
 		}
 		else if(isReplaceable(level, pos)) {
-			context.setBlock(pos, RuBlocks.WILLOW_WOOD_SET.getLog().defaultBlockState());
+			context.setBlock(pos, RUBlocks.WILLOW_WOOD_SET.getLog().defaultBlockState());
 		}
 		else{
 			return ;
 		}
 
 		if(level.isStateAtPosition(pos, WillowTrunkDecorator::isForestGrass)){
-			context.setBlock(pos.below(), RuBlocks.PEAT_DIRT.get().defaultBlockState());
+			context.setBlock(pos.below(), RUBlocks.PEAT_DIRT.get().defaultBlockState());
 		}
 		else if(level.isStateAtPosition(pos, WillowTrunkDecorator::isPlainsGrass)){
-			context.setBlock(pos.below(), RuBlocks.SILT_DIRT.get().defaultBlockState());
+			context.setBlock(pos.below(), RUBlocks.SILT_DIRT.get().defaultBlockState());
 		}
 		else if(level.isStateAtPosition(pos, WillowTrunkDecorator::isGrass)){
 			context.setBlock(pos.below(), Blocks.DIRT.defaultBlockState());
@@ -94,15 +110,15 @@ public class WillowTrunkDecorator extends TreeDecorator {
 		return state.is(Blocks.GRASS_BLOCK)
 				||state.is(Blocks.MYCELIUM)
 				||state.is(Blocks.DIRT)
-				||state.is(RuBlocks.ALPHA_GRASS_BLOCK.get());
+				||state.is(RUBlocks.ALPHA_GRASS_BLOCK.get());
 	}
 	public static boolean isForestGrass(BlockState state) {
-		return state.is(RuBlocks.PEAT_GRASS_BLOCK.get())
-				||state.is(RuBlocks.PEAT_DIRT.get());
+		return state.is(RUBlocks.PEAT_GRASS_BLOCK.get())
+				||state.is(RUBlocks.PEAT_DIRT.get());
 	}
 	public static boolean isPlainsGrass(BlockState state) {
-		return state.is(RuBlocks.SILT_GRASS_BLOCK.get())
-				||state.is(RuBlocks.SILT_DIRT.get());
+		return state.is(RUBlocks.SILT_GRASS_BLOCK.get())
+				||state.is(RUBlocks.SILT_DIRT.get());
 	}
 	public static boolean isDirt(BlockState state) {
 		return state.is(BlockTags.DIRT);
@@ -111,15 +127,15 @@ public class WillowTrunkDecorator extends TreeDecorator {
 		return state.is(Blocks.GRASS_BLOCK)
 				||state.is(Blocks.MYCELIUM)
 				||state.is(Blocks.DIRT)
-				||state.is(RuBlocks.PEAT_GRASS_BLOCK.get())
-				||state.is(RuBlocks.SILT_GRASS_BLOCK.get())
-				||state.is(RuBlocks.ALPHA_GRASS_BLOCK.get())
-				||state.is(RuBlocks.PEAT_DIRT.get())
-				||state.is(RuBlocks.SILT_DIRT.get());
+				||state.is(RUBlocks.PEAT_GRASS_BLOCK.get())
+				||state.is(RUBlocks.SILT_GRASS_BLOCK.get())
+				||state.is(RUBlocks.ALPHA_GRASS_BLOCK.get())
+				||state.is(RUBlocks.PEAT_DIRT.get())
+				||state.is(RUBlocks.SILT_DIRT.get());
 	}
 
 	public static boolean isReplaceableBlock(BlockState state) {
-		return state.is(RuTags.REPLACEABLE_BLOCKS);
+		return state.is(RUBlockTags.REPLACEABLE_BLOCKS);
 	}
 	public static boolean isReplaceable(LevelSimulatedReader reader, BlockPos pos) {
 		return reader.isStateAtPosition(pos, WillowTrunkDecorator::isReplaceableBlock);
